[gd_scene format=3 uid="uid://cmv7g1f8b5v6r"]

[ext_resource type="Script" uid="uid://dmeraee1fqr44" path="res://waitingroom.gd" id="1"]

[node name="waitingroom" type="Control" unique_id=1305923268]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1991814767]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.3, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1611435614]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer" unique_id=745646087]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "等待房間"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer" unique_id=1156939712]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "狀態: 等待玩家..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="VBoxContainer" unique_id=690828198]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="VBoxContainer" unique_id=1430268029]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
disabled = true
text = "開始遊戲"
